--- a/inven.ini
+++ b/inven.ini
@@ -1,7 +1,7 @@
 [Terraform]
-n1 ansible_host=10.0.0.101 ansible_ssh_user=ec2-user
-n2 ansible_host=10.0.0.102 ansible_ssh_user=ec2-user
-n3 ansible_host=10.0.0.207 ansible_ssh_user=ubuntu
+n1 ansible_host=10.0.0.101
+n2 ansible_host=10.0.0.102
 
 [Terraform:vars]
+ansible_ssh_user=ec2-user
 ansible_ssh_private_key_file=/home/ec2-user/Terraform/Terraform.pem
