--- a/webserver/tasks/install.yml
+++ b/webserver/tasks/install.yml
@@ -1,4 +1,8 @@
 ---
+  - name: update yum repo
+    yum:
+      name: '*'
+      state: latest
   - name: install httpd
     yum:
       name: httpd
