--- a/Ansible/miles.yml
+++ b/Ansible/miles.yml
@@ -1,6 +1,6 @@
 ---
 - name: checking the miles
-  hosts: localhost
+  hosts: Terraform
   gather_facts: true
   tasks:
     - name: checking the mode of transport
